# alise

./: .gitignore  Makefile  README.md  api-endpoints.md  requirements.txt  setup.cfg  tox.ini
alise/: README.md  alise.conf  cli.py  config.py  daemon.py  database.py  logsetup.py  models.py  oauth2_config.py  parse_args.py  pathdiversion.py  router_api.py  router_ssr.py
alise/etc/: alise.conf  alise.service  nginx.alise
alise/templates/: base.html  root.html  site.html
etc/: nginx.alise
tests/: cli.py
tools/: urlencode.py
