


[metadata]
name = alise
summary = Tool to link accounts 
description_file = README.md
description_content_type = text/markdown; charset=UTF-8

author = Marcus Hardt
author_email = hardt@kit.edu

home_page = https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_slug}}
project_urls =
    Bug Tracker = https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_slug}}/issues
    Documentation = https://alise.readthedocs.io/en/latest/

license = MIT license
license_file = LICENSE

# TODO Add more classifiers here
classifier =
    Programming Language :: Python :: 3


[options.entry_points]
console_scripts =
    alise=alise.cli:main


[bdist_wheel]
universal = 1

[files]
packages =
    alise
[pycodestyle]
select =
ignore = E127,E203,E221,E241,E128
max_line_length = 100
max_doc_length = 100

[tool.black]
line-length = 100
